<resources>
    <string name="app_name">BlockBuddy</string>
    <string name="app_notification_title">BlockBuddy is processing calls</string>
    <string name="app_notification_description">Tap to return to the app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="call_processing">Call Processing</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <!-- Call Processing Fragment -->
    <string name="welcome_to_blockbuddy">Welcome to BlockBuddy!</string>
    <string name="processing_calls">Processing calls…</string>
    <string name="processing_turned_off">Processing turned off</string>
    <string name="press_button_to_start_processing">Press button to start processing</string>
    <string name="press_button_to_stop_processing">Press button to stop processing</string>
    <string name="permission_needed">Permission needed</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="blockbuddy_needs_following_permission">To be able to process incoming calls, BlockBuddy needs following permission: \n - reading phone state \n - call log \n - read contacts \n - call phone</string>
    <string name="suspicious_call">Suspicious call</string>
    <string name="be_careful_this_number_is_not_on_your_contact_list">Be careful. This number is not on your contact list.</string>
    <string name="channel_name">BlockBuddyChannel</string>

    <!-- History Fragment -->
    <string name="to_be_able_to_see_history_you_need_to_give_permissions_to_blockbuddy">To be able to see history, you need to give permissions to BlockBuddy.</string>
    <string name="unknown">Unknown</string>

    <!-- Settings Fragment -->
    <string name="customize_your_settings">Customize your settings:</string>
    <string name="allow_calls_from_contact_list_only">Allow calls from contact list only</string>
    <string name="allow_sms_from_contact_list_only">Allow SMS from contact list only</string>
    <string name="add">Add</string>
    <string name="enter_number">Enter number…</string>
    <string name="this_number_is_already_blocked">This number is already blocked.</string>
    <string name="caller_blocked">Caller blocked!</string>
    <string name="call_ended">Call ended</string>

    <!-- Content Description -->
    <string name="action_button">Action Button</string>
    <string name="icon_indicator_call_type">Icon indicator - call type</string>

</resources>