<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/manageProcessingFragment">

    <fragment
        android:id="@+id/manageProcessingFragment"
        android:name="com.gabrielaangebrandt.blockbuddy.view.fragment.ManageProcessingFragment"
        android:label="@string/call_processing"
        tools:layout="@layout/fragment_manage_processing">

        <action
            android:id="@+id/manageProcessingToHistory"
            app:destination="@id/historyFragment" />

        <action
            android:id="@+id/manageProcessingToSettings"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.gabrielaangebrandt.blockbuddy.view.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/historyToSettings"
            app:destination="@id/settingsFragment" />

        <action
            android:id="@+id/historyToManageProcessing"
            app:destination="@id/manageProcessingFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.gabrielaangebrandt.blockbuddy.view.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/settingsToManageProcessing"
            app:destination="@id/manageProcessingFragment" />
        <action
            android:id="@+id/settingsToHistory"
            app:destination="@id/historyFragment" />
    </fragment>
</navigation>